# open_manipulator_training

./: CMakeLists.txt  README.md  dependencies.repos  package.xml
launch/: spawn_ar_box.launch  test.launch
scripts/: grasping_test  move_group_python_interface_tutorial.py
scripts/smart_grasper/: __init__.py  smart_grasper.py
src/: move_to_ar_box.cpp
urdf/box_sdf/: model.sdf  texture.material
