<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_training</name>
  <version>0.0.0</version>
  <description>The open_manipulator_training package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="docker_ros@todo.todo">docker_ros</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>open_manipulator_gazebo</build_depend>
  <build_depend>open_manipulator_moveit</build_depend>
  <build_depend>tf</build_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>open_manipulator_gazebo</exec_depend>
  <exec_depend>open_manipulator_moveit</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
    <gazebo_ros
      gazebo_media_path="${prefix}:${prefix}/urdf"
      gazebo_model_path="${prefix}/urdf"/>

  </export>
</package>
